# stm32test

./: .gitignore  CMakeLists.txt  Trace.c  download.sh  main.c  mcuconfig.h  printf.c
Drivers/: CMakeLists.txt  ConfigBSP.cmake
Drivers/BSP/STM32F4-Discovery/: BSPConfig.h
Drivers/BSP/TBB16-F103C8/: BSPConfig.h  CMakeLists.txt  Config.cmake  MX_MSP_Init.c  MX_MSP_it.c  usb_device.c  usbd_conf.c  usbd_conf.h  usbd_desc.c  usbimp.c
Drivers/BSP/TBB19-F407ZG/: BSPConfig.h  CMakeLists.txt  MX_MSP_Init.c
Drivers/Components/STM32_USB_Device_Library/: CMakeLists.txt
app/: CMakeLists.txt  app.h  ds1302.c  main.c  printf.c  spibus.c  usbd_def.h  usbimp.c  util.c
app/RC522/: rc522.c  rc522.h  rc522test.c
cmake/: arm-none-gcc.cmake
cmake/Platform/: MMOS.cmake
cmake/borads/: NUCLEO-F103RB.cmake  STM32F4-Discovery.cmake
cmake/mcus/: stm32f103x8.cmake  stm32f103x8.ld  stm32f103x8.x.ld  stm32f407xg.cmake  stm32f407xg.ld  stm32f407xg.x.ld
cmake/socs/: arm-v7m.cmake  cortex-m3.cmake  cortex-m4.cmake  cortex-m4f.cmake  stm32f1xx.cmake  stm32f4xx.cmake
libc/: CMakeLists.txt
libc/src/: printf.c
libmmosc/: CMakeLists.txt
libmmosc/src/: syscalls.c
startup/: CMakeLists.txt  _start.c  startup.c  sysinit.c  sysinit_STM32F1xx.c  sysinit_STM32F4xx.c
